--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickchat",
+  "name": "quickchat-server",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:Kaedeko/quickchat.git",
