--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "vue": {
+    "publicPath": "/qc/"
+  },
   "dependencies": {
     "core-js": "^2.6.5",
     "cryptr": "^4.0.2",
